--- a/package.json
+++ b/package.json
@@ -44,7 +44,7 @@
     "@diplodoc/cut-extension": "^0.2.5",
     "@diplodoc/tabs-extension": "^3.3.0",
     "chalk": "^4.1.2",
-    "cheerio": "^1.0.0-rc.12",
+    "cheerio": "^1.0.0",
     "css": "^3.0.0",
     "cssfilter": "0.0.10",
     "get-root-node-polyfill": "1.0.0",
@@ -71,7 +71,7 @@
     "@types/jest": "28.1.7",
     "@types/js-yaml": "^4.0.5",
     "@types/lodash": "4.14.183",
-    "@types/markdown-it": "12.2.3",
+    "@types/markdown-it": "^13.0.9",
     "@types/markdown-it-attrs": "4.1.0",
     "@types/node": "17.0.10",
     "@types/sanitize-html": "^2.9.3",
@@ -80,9 +80,11 @@
     "esbuild-sass-plugin": "^2.12.0",
     "highlight.js": "^11.8.0",
     "jest": "28.1.3",
+    "jest-serializer-html": "^7.1.0",
     "markdown-it-testgen": "^0.1.6",
     "postcss": "^8.4.27",
     "postcss-preset-env": "^9.1.1",
+    "ts-dedent": "^2.2.0",
     "ts-jest": "28.0.8",
     "typescript": "4.7.4"
   },
