--- a/package.json
+++ b/package.json
@@ -61,7 +61,8 @@
     "markdownlint-rule-helpers": "0.17.2",
     "sanitize-html": "^2.11.0",
     "slugify": "1.6.6",
-    "svgo": "^3.2.0"
+    "svgo": "^3.2.0",
+    "ts-dedent": "^2.2.0"
   },
   "devDependencies": {
     "@diplodoc/babel-preset": "^1.0.2",
@@ -85,7 +86,6 @@
     "markdown-it-testgen": "^0.1.6",
     "postcss": "^8.4.27",
     "postcss-preset-env": "^9.1.1",
-    "ts-dedent": "^2.2.0",
     "ts-jest": "28.0.8",
     "typescript": "4.7.4"
   },
