fix: change local resolution alias to something that works with scss loader

--- a/playground/tsconfig.json
+++ b/playground/tsconfig.json
@@ -14,8 +14,8 @@
     "skipLibCheck": true,
     "noImplicitAny": false,
     "paths": {
-      "~transform/*": ["../lib/*"],
-      "~transform-dist/*": ["../dist/*"]
+      "@local/transform/*": ["../lib/*"],
+      "@local/transform-dist/*": ["../dist/*"]
     }
   },
   "include": ["src/**/*.ts", "src/**/*.tsx"],
