--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "@diplodoc/cut-extension": "^0.7.2",
     "@diplodoc/file-extension": "^0.2.1",
     "@diplodoc/tabs-extension": "^3.7.2",
+    "@diplodoc/utils": "^2.1.0",
     "chalk": "^4.1.2",
     "cheerio": "^1.0.0",
     "css": "^3.0.0",
