--- a/package.json
+++ b/package.json
@@ -54,7 +54,7 @@
     "@diplodoc/tabs-extension": "^3.7.2",
     "@diplodoc/utils": "^2.1.0",
     "chalk": "^4.1.2",
-    "cheerio": "^1.0.0",
+    "parse5": "^7.1.2",
     "css": "^3.0.0",
     "cssfilter": "0.0.10",
     "get-root-node-polyfill": "1.0.0",
