--- a/package.json
+++ b/package.json
@@ -91,12 +91,14 @@
     "esbuild": "^0.23.1",
     "esbuild-sass-plugin": "^3.3.1",
     "highlight.js": "^11.8.0",
+    "husky": "^9.1.6",
     "jest": "28.1.3",
     "jest-serializer-html": "^7.1.0",
     "markdown-it-testgen": "^0.1.6",
     "npm-run-all": "^4.1.5",
     "postcss": "^8.4.27",
     "postcss-preset-env": "^9.1.1",
+    "sass": "^1.79.0",
     "ts-jest": "28.0.8",
     "typescript": "4.7.4"
   },
