--- a/.github/workflows/prerelease.yaml
+++ b/.github/workflows/prerelease.yaml
@@ -19,7 +19,9 @@ jobs:
           registry-url: 'https://registry.npmjs.org'
           cache: 'npm'
       - name: Install latest npm (>= 11.5.1)
-        run: npm install -g npm@latest
+        run: |
+          [ "$(printf '%s\n' "11.5.1" "$(npm -v)" | sort -V | head -n1)" = "11.5.1" ] || npm install -g npm@latest
+        shell: bash
       - run: |
           npm ci
           cd playground && npm ci
