--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -28,7 +28,9 @@ jobs:
           node-version: 22
           registry-url: 'https://registry.npmjs.org'
       - name: Install latest npm (>= 11.5.1)
-        run: npm install -g npm@latest
+        run: |
+          [ "$(printf '%s\n' "11.5.1" "$(npm -v)" | sort -V | head -n1)" = "11.5.1" ] || npm install -g npm@latest
+        shell: bash
       - run: |
           npm ci
           cd playground && npm ci
