--- a/.github/workflows/prerelease.yaml
+++ b/.github/workflows/prerelease.yaml
@@ -26,4 +26,4 @@ jobs:
           npm ci
           cd playground && npm ci
       - run: npm version --no-git-tag-version 0.0.0-rc-$(git branch --show-current)-$(date "+%Y%m%d%H%M")
-      - run: npm publish --no-tag
+      - run: npm publish --tag $(git branch --show-current)
