--- a/package.json
+++ b/package.json
@@ -42,7 +42,7 @@
     "artifact:playground": "node --input-type=module -e \"(await import('./playground/scripts/pages.mjs')).bundleDeployables('./pages-build')\"",
     "artifact:pages": "npm run build && npm run artifact:playground",
     "prepublishOnly": "npm run lint && npm run test && npm run build",
-    "test": "jest --coverage",
+    "test": "vitest run --coverage",
     "test:playwright:nobuild": "cd e2e && npm run playwright:docker --",
     "test:playwright": "npm run build && npm run test:playwright:nobuild --",
     "typecheck": "tsc -p tsconfig.json --noEmit",
@@ -82,27 +82,25 @@
     "@diplodoc/tsconfig": "^1.0.2",
     "@types/css": "0.0.34",
     "@types/github-slugger": "^1.3.0",
-    "@types/jest": "28.1.7",
     "@types/js-yaml": "^4.0.5",
     "@types/lodash": "4.14.183",
     "@types/markdown-it": "^13.0.9",
     "@types/markdown-it-attrs": "4.1.0",
-    "@types/node": "17.0.10",
+    "@types/node": "^22.19.7",
     "@types/sanitize-html": "^2.9.3",
+    "@vitest/ui": "^2.1.8",
     "autoprefixer": "^10.4.15",
     "esbuild": "^0.27.2",
     "esbuild-sass-plugin": "^3.3.1",
     "highlight.js": "^11.8.0",
-    "jest": "28.1.3",
-    "jest-serializer-html": "^7.1.0",
     "markdown-it-testgen": "^0.1.6",
     "npm-run-all": "^4.1.5",
     "postcss": "^8.4.27",
     "postcss-preset-env": "^9.1.1",
     "sass": "^1.79.0",
     "terminal-link": "^2.1.1",
-    "ts-jest": "28.0.8",
-    "typescript": "4.7.4"
+    "typescript": "4.7.4",
+    "vitest": "^2.1.8"
   },
   "peerDependencies": {
     "highlight.js": "^10.0.3 || ^11"
