--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,7 +7,7 @@
     "baseUrl": ".",
     "declaration": true,
     "target": "ES6",
-    "types": ["node", "jest"]
+    "types": ["node"]
   },
   "include": ["src/**/*", "test/**/*"],
   "exclude": ["node_modules", "lib", "dist", "e2e", "playground"]
